Completing Online Learning SotA

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -54,6 +54,14 @@
   keywords = {Computer Science,general,Operations Research/Decision Theory,Optimization,Real Functions}
 }
 
+@inproceedings{aljundi2017expert,
+  title = {Expert Gate: {{Lifelong}} Learning with a Network of Experts},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Aljundi, Rahaf and Chakravarty, Punarjay and Tuytelaars, Tinne},
+  year = 2017,
+  pages = {3366--3375}
+}
+
 @article{alsabaanOptimizationFuelCost2013,
   title = {Optimization of {{Fuel Cost}} and {{Emissions Using V2V Communications}}},
   author = {Alsabaan, Maazen and Naik, Kshirasagar and Khalifa, Tarek},
@@ -69,6 +77,14 @@
   abstract = {Vehicular communication networks are increasingly being considered as a means to conserve fuel and reduce emissions within transportation systems. This paper focuses on using traffic light signals to communicate with approaching vehicles. The communication can be traffic-light-signal-to-vehicle (TLS2V) and vehicle-to-vehicle (V2V). Based on the information sent, the vehicle receiving the message adapts its speed to a recommended speed (S R ), which helps the vehicle reduce fuel consumption and emissions. The key contribution of this paper is the proposal of a comprehensive optimization model that involves V2V and TLS2V communications. The objective function is to minimize fuel consumption by and emissions from vehicles. The speed that can achieve this goal is the optimum S R (S R *). We also propose efficient heuristic expressions to compute the optimum or near-optimum value of S R .},
   langid = {english},
   file = {C:\Users\uif72473\Zotero\storage\C8GXNKMA\Alsabaan et al. - 2013 - Optimization of Fuel Cost and Emissions Using V2V .pdf}
+}
+
+@article{andrychowicz2017hindsight,
+  title = {Hindsight Experience Replay},
+  author = {Andrychowicz, Marcin and Wolski, Filip and Ray, Alex and Schneider, Jonas and Fong, Rachel and Welinder, Peter and McGrew, Bob and Tobin, Josh and Pieter Abbeel, OpenAI and Zaremba, Wojciech},
+  year = 2017,
+  journal = {Advances in neural information processing systems},
+  volume = {30}
 }
 
 @inproceedings{anjomshoae2019explainable,
@@ -95,6 +111,28 @@
   abstract = {This brief proposes the use of upcoming traffic signal information within the vehicle's adaptive cruise control system to reduce idle time at stop lights and fuel consumption. To achieve this goal an optimization-based control algorithm is formulated that uses short range radar and traffic signal information predictively to schedule an optimum velocity trajectory for the vehicle. The control objectives are: timely arrival at green light with minimal use of braking, maintaining safe distance between vehicles, and cruising at or near set speed. Three example simulation case studies are presented to demonstrate the potential impact on fuel economy, emission levels, and trip time.},
   langid = {english},
   file = {C:\Users\uif72473\Zotero\storage\6BVB6LHS\Asadi and Vahidi - 2010 - Predictive Cruise Control Utilizing Upcoming Traf.pdf}
+}
+
+@article{atkeson1997locally,
+  title = {Locally Weighted Learning},
+  author = {Atkeson, Christopher G and Moore, Andrew W and Schaal, Stefan},
+  year = 1997,
+  journal = {Artificial intelligence review},
+  volume = {11},
+  number = {1},
+  pages = {11--73},
+  publisher = {Springer}
+}
+
+@article{atkeson1997LocallyControl,
+  title = {Locally Weighted Learning for Control},
+  author = {Atkeson, Christopher G and Moore, Andrew W and Schaal, Stefan},
+  year = 1997,
+  journal = {Artificial intelligence review},
+  volume = {11},
+  number = {1},
+  pages = {75--113},
+  publisher = {Springer}
 }
 
 @techreport{atri2024operational,
@@ -142,6 +180,15 @@
   year = 2015,
   pages = {2496--2501},
   publisher = {IEEE}
+}
+
+@inproceedings{bifet2007learning,
+  title = {Learning from Time-Changing Data with Adaptive Windowing},
+  booktitle = {Proceedings of the 2007 {{SIAM}} International Conference on Data Mining},
+  author = {Bifet, Albert and Gavalda, Ricard},
+  year = 2007,
+  pages = {443--448},
+  publisher = {SIAM}
 }
 
 @inproceedings{bifet2009adaptive,
@@ -308,6 +355,13 @@
   keywords = {Classification LIBSVM optimization regression support vector machines SVM}
 }
 
+@inproceedings{chaudhry2019continual,
+  title = {Continual Learning with Tiny Episodic Memories},
+  booktitle = {Workshop on Multi-Task and Lifelong Reinforcement Learning},
+  author = {Chaudhry, Arslan and Rohrbach, Marcus and Elhoseiny, Mohamed and Ajanthan, Thalaiyasingam and Dokania, P and Torr, P and Ranzato, M},
+  year = 2019
+}
+
 @article{chenComparativeStudyModel2021,
   title = {A {{Comparative Study}} of {{H}}{$\infty$} and {{Model Predictive Control Approach}} to {{Eco-Driving}}},
   author = {Chen, Di and Kim, Youngki},
@@ -365,6 +419,17 @@
   publisher = {SIAM}
 }
 
+@article{crespi2008top,
+  title = {Top-down vs Bottom-up Methodologies in Multi-Agent System Design},
+  author = {Crespi, Valentino and Galstyan, Aram and Lerman, Kristina},
+  year = 2008,
+  journal = {Autonomous Robots},
+  volume = {24},
+  number = {3},
+  pages = {303--313},
+  publisher = {Springer}
+}
+
 @article{dani2024human,
   title = {Human-in-the-Loop Robot Control for Human-Robot Collaboration},
   author = {Dani, Ashwin P and Salehi, Iman and Rotithor, Ghananeel and Trombetta, Daniel and Ravichandar, Harish},
@@ -389,6 +454,18 @@
   number = {1},
   pages = {19--67},
   publisher = {Springer}
+}
+
+@article{Delange_2021,
+  title = {A Continual Learning Survey: {{Defying}} Forgetting in Classification Tasks},
+  author = {Delange, Matthias and Aljundi, Rahaf and Masana, Marc and Parisot, Sarah and Jia, Xu and Leonardis, Ales and Slabaugh, Greg and Tuytelaars, Tinne},
+  year = 2021,
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  pages = {1--1},
+  publisher = {{Institute of Electrical and Electronics Engineers (IEEE)}},
+  issn = {1939-3539},
+  doi = {10.1109/tpami.2021.3057446},
+  file = {C:\Users\uif72473\Zotero\storage\X2L2XA5C\Delange et al. - 2021 - A continual learning survey Defying forgetting in classification tasks.pdf}
 }
 
 @article{desjardinsCooperativeAdaptiveCruise2011,
@@ -433,6 +510,14 @@
   isbn = {978-3-540-45014-6},
   langid = {english},
   keywords = {Decision Tree,Ensemble Method,Input Feature,Learning Algorithm,Training Data}
+}
+
+@inproceedings{domingos2000mining,
+  title = {Mining High-Speed Data Streams},
+  booktitle = {Proceedings of the Sixth {{ACM SIGKDD}} International Conference on {{Knowledge}} Discovery and Data Mining},
+  author = {Domingos, Pedro and Hulten, Geoff},
+  year = 2000,
+  pages = {71--80}
 }
 
 @article{dorri2018multi,
@@ -503,6 +588,15 @@
   file = {C:\Users\uif72473\Zotero\storage\U463RZQH\Fourez et al. - 2022 - An ensemble Multi-Agent System for non-linear clas.pdf}
 }
 
+@article{frenkel2021bottom,
+  title = {Bottom-up and Top-down Neural Processing Systems Design: {{Neuromorphic}} Intelligence as the Convergence of Natural and Artificial Intelligence},
+  author = {Frenkel, Charlotte Philippine and Bol, David and Indiveri, Giacomo},
+  year = 2021,
+  journal = {ArXiv. org},
+  number = {2106.01288},
+  publisher = {Cornell University}
+}
+
 @article{freund1997decision,
   title = {A Decision-Theoretic Generalization of on-Line Learning and an Application to Boosting},
   author = {Freund, Yoav and Schapire, Robert E},
@@ -547,6 +641,26 @@
   langid = {english},
   keywords = {environmental information,points of interest,smart cars,speed recommendation},
   file = {C:\Users\uif72473\Zotero\storage\UHMKJ2Q5\Galanis et al. - 2019 - Environmental-Based Speed Recommendation for Futur.pdf}
+}
+
+@inproceedings{gama2004learning,
+  title = {Learning with Drift Detection},
+  booktitle = {Brazilian Symposium on Artificial Intelligence},
+  author = {Gama, Joao and Medas, Pedro and Castillo, Gladys and Rodrigues, Pedro},
+  year = 2004,
+  pages = {286--295},
+  publisher = {Springer}
+}
+
+@article{gama2014survey,
+  title = {A Survey on Concept Drift Adaptation},
+  author = {Gama, Jo{\~a}o and {\v Z}liobait{\.e}, Indr{\.e} and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
+  year = 2014,
+  journal = {ACM computing surveys (CSUR)},
+  volume = {46},
+  number = {4},
+  pages = {1--37},
+  publisher = {ACM New York, NY, USA}
 }
 
 @article{gamezsernaDynamicSpeedAdaptation2017,
@@ -650,6 +764,17 @@
   archiveprefix = {arXiv}
 }
 
+@article{han2010research,
+  title = {Research on an Online Self-Organizing Radial Basis Function Neural Network},
+  author = {Han, Honggui and Chen, Qili and Qiao, Junfei},
+  year = 2010,
+  journal = {Neural computing and applications},
+  volume = {19},
+  number = {5},
+  pages = {667--676},
+  publisher = {Springer}
+}
+
 @article{hanSafeEcoDrivingControl2018,
   title = {Safe- and {{Eco-Driving Control}} for {{Connected}} and {{Automated Electric Vehicles Using Analytical State-Constrained Optimal Solution}}},
   author = {Han, Jihun and Sciarretta, Antonio and Ojeda, Luis Leon and De Nunzio, Giovanni and Thibault, Laurent},
@@ -682,6 +807,15 @@
   abstract = {The speed at which people elect to travel is affected by vehicle and road design; by limits to speed and enforcement of those limits; by traffic control, signs, and markings; and so forth. The spee...},
   langid = {english},
   file = {C:\Users\uif72473\Zotero\storage\XBXHTD2U\Hauer - 2009 - Speed and Safety.pdf}
+}
+
+@inproceedings{hazimeh2020tree,
+  title = {The Tree Ensemble Layer: {{Differentiability}} Meets Conditional Computation},
+  booktitle = {International Conference on Machine Learning},
+  author = {Hazimeh, Hussein and Ponomareva, Natalia and Mol, Petros and Tan, Zhenyu and Mazumder, Rahul},
+  year = 2020,
+  pages = {4138--4148},
+  publisher = {PMLR}
 }
 
 @article{hazoorDevelopmentNovelIntelligent2021,
@@ -719,6 +853,15 @@
   publisher = {Elsevier}
 }
 
+@incollection{hue2016online,
+  title = {Online Learning of a Weighted Selective Naive {{Bayes}} Classifier with Non-Convex Optimization},
+  booktitle = {Advances in Knowledge Discovery and Management: {{Volume}} 6},
+  author = {Hue, Carine and Boull{\'e}, Marc and Lemaire, Vincent},
+  year = 2016,
+  pages = {3--17},
+  publisher = {Springer}
+}
+
 @article{hullermeierAleatoricEpistemicUncertainty2021,
   title = {Aleatoric and Epistemic Uncertainty in Machine Learning: An Introduction to Concepts and Methods},
   author = {H{\"u}llermeier, Eyke and Waegeman, Willem},
@@ -736,12 +879,44 @@
   file = {C:\Users\uif72473\Zotero\storage\CCDXJ2JJ\Hüllermeier and Waegeman - 2021 - Aleatoric and epistemic uncertainty in machine lea.pdf}
 }
 
+@article{jacobsen2024online,
+  title = {Online Linear Regression in Dynamic Environments via Discounting},
+  author = {Jacobsen, Andrew and Cutkosky, Ashok},
+  year = 2024,
+  journal = {arXiv preprint arXiv:2405.19175},
+  eprint = {2405.19175},
+  archiveprefix = {arXiv}
+}
+
 @article{Jamil2013ALS,
   title = {A Literature Survey of Benchmark Functions for Global Optimisation Problems},
   author = {Jamil, Momin and Yang, Xin-She},
   year = 2013,
   journal = {ArXiv},
   volume = {abs/1308.4008}
+}
+
+@article{jia2025online,
+  title = {An Online Self-Organizing Radial Basis Function Neural Network Based on {{Gaussian Membership}}},
+  author = {Jia, Lijie and Li, Wenjing and Qiao, Junfei and Zhang, Xinliang},
+  year = 2025,
+  journal = {Applied Intelligence},
+  volume = {55},
+  number = {6},
+  pages = {1--17},
+  publisher = {Springer},
+  file = {C:\Users\uif72473\Zotero\storage\Z6RR62L3\Jia et al. - 2025 - An online self-organizing radial basis function neural network based on Gaussian Membership.pdf}
+}
+
+@article{jiang2017forest,
+  title = {Forest Pruning Based on Branch Importance},
+  author = {Jiang, Xiangkui and Wu, Chang-an and Guo, Huaping},
+  year = 2017,
+  journal = {Computational Intelligence and Neuroscience},
+  volume = {2017},
+  number = {1},
+  pages = {3162571},
+  publisher = {Wiley Online Library}
 }
 
 @article{jiangReinforcementLearningBased2022,
@@ -865,6 +1040,17 @@
   file = {C:\Users\uif72473\Zotero\storage\Q53GXHM9\Kim et al. - 2025 - Reinforcement learning approach to develop variable speed limit strategy using vehicle data and simu.pdf}
 }
 
+@article{kirkpatrick2017overcoming,
+  title = {Overcoming Catastrophic Forgetting in Neural Networks},
+  author = {Kirkpatrick, James and Pascanu, Razvan and Rabinowitz, Neil and Veness, Joel and Desjardins, Guillaume and Rusu, Andrei A and Milan, Kieran and Quan, John and Ramalho, Tiago and {Grabska-Barwinska}, Agnieszka and others},
+  year = 2017,
+  journal = {Proceedings of the national academy of sciences},
+  volume = {114},
+  number = {13},
+  pages = {3521--3526},
+  publisher = {National Academy of Sciences}
+}
+
 @article{kolmanovskyTerrainTrafficOptimized2010,
   title = {Terrain and {{Traffic Optimized Vehicle Speed Control}}},
   author = {Kolmanovsky, Ilya V. and Filev, Dimitar P.},
@@ -925,6 +1111,14 @@
   publisher = {ACM New York, NY, USA}
 }
 
+@article{lakshminarayanan2014mondrian,
+  title = {Mondrian Forests: {{Efficient}} Online Random Forests},
+  author = {Lakshminarayanan, Balaji and Roy, Daniel M and Teh, Yee Whye},
+  year = 2014,
+  journal = {Advances in neural information processing systems},
+  volume = {27}
+}
+
 @inproceedings{le2017gogp,
   title = {Gogp: {{Fast}} Online Regression with Gaussian Processes},
   booktitle = {2017 {{IEEE}} International Conference on Data Mining ({{ICDM}})},
@@ -963,6 +1157,13 @@
   abstract = {With the development of autonomous vehicles, research on energy-efficient eco-driving is becoming increasingly important. The optimal control problem of determining the speed profile of the vehicle for minimizing energy consumption is a challenging problem that necessitates the consideration of various aspects, such as the vehicle energy consumption, slope of the road, and driving environment, e.g., the traffic and other vehicles on the road. In this study, an approach using reinforcement learning was applied to the eco-driving problem for electric vehicles considering road slopes. A novel model-based reinforcement learning algorithm for eco-driving was developed, which separates the vehicle's energy consumption approximation model and driving environment model. Thus, the domain knowledge of vehicle dynamics and the powertrain system is utilized for the reinforcement learning process, while model-free characteristics are maintained by updating the approximation model using experience replay. The proposed algorithm was tested via a vehicle simulation and compared with a solution obtained using dynamic programming (DP), and as well as conventional cruise control driving with constant speed. The simulation results indicated that the speed profile optimized using model-based reinforcement learning had similar behavior to the global solution obtained via DP and energy saving performance compared with cruise control.},
   langid = {english},
   file = {C:\Users\uif72473\Zotero\storage\HCLJTQHL\Lee et al. - 2020 - Model-Based Reinforcement Learning for Eco-Driving.pdf}
+}
+
+@inproceedings{lehnert2012locally,
+  title = {Locally Weighted Learning Model Predictive Control for Elastic Joint Robots},
+  booktitle = {Australasian Conference on Robotics and Automation},
+  author = {Lehnert, Christopher and Wyeth, Gordon},
+  year = 2012
 }
 
 @article{linardatosExplainableAIReview2020,
@@ -1120,6 +1321,28 @@
   file = {C:\Users\uif72473\Zotero\storage\YE7YSLXM\Malikopoulos et al. - 2018 - Optimal Control for Speed Harmonization of Automat.pdf}
 }
 
+@article{manzano2020online,
+  title = {Online Learning Robust {{MPC}}: An Exploration-Exploitation Approach},
+  author = {Manzano, {\relax JM} and Calliess, J and {de la Pena}, D Munoz and Limon, D},
+  year = 2020,
+  journal = {IFAC-PapersOnLine},
+  volume = {53},
+  number = {2},
+  pages = {5292--5297},
+  publisher = {Elsevier}
+}
+
+@article{maric2024online,
+  title = {Online Learning of Continuous Signed Distance Fields Using Piecewise Polynomials},
+  author = {Mari{\'c}, Ante and Li, Yiming and Calinon, Sylvain},
+  year = 2024,
+  journal = {IEEE Robotics and Automation Letters},
+  volume = {9},
+  number = {6},
+  pages = {6020--6026},
+  publisher = {IEEE}
+}
+
 @article{mcinnes2018umap,
   title = {Umap: {{Uniform}} Manifold Approximation and Projection for Dimension Reduction},
   author = {McInnes, Leland and Healy, John and Melville, James},
@@ -1159,6 +1382,20 @@
   file = {C:\Users\uif72473\Zotero\storage\UZV43NJR\Messaoudi et Lahlouhi - 2018 - An agent-based inter-vehicle cooperative robust ca.pdf}
 }
 
+@article{mnihHumanlevelControlDeep2015,
+  type = {10.1038/Nature14236},
+  title = {Human-Level Control through Deep Reinforcement Learning},
+  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
+  year = 2015,
+  journal = {Nature},
+  volume = {518},
+  pages = {529--533},
+  publisher = {Nature Publishing Group},
+  abstract = {An artificial agent is developed that learns to play~a diverse range of classic Atari 2600 computer games directly from sensory experience, achieving a~performance comparable to that of an expert human player; this work paves the way to building general-purpose learning algorithms that bridge the divide between perception and action. For an artificial agent to be considered truly intelligent it needs to excel at a variety of tasks considered challenging for humans. To date, it has only been possible to create individual algorithms able to master a single discipline --- for example, IBM's Deep Blue beat the human world champion at chess but was not able to do anything else. Now a team working at Google's DeepMind subsidiary has developed an artificial agent --- dubbed a deep Q-network --- that learns to play 49 classic Atari 2600 'arcade' games directly from sensory experience, achieving performance on a par with that of an expert human player. By combining reinforcement learning (selecting actions that maximize reward --- in this case the game score) with deep learning (multilayered feature extraction from high-dimensional data --- in this case the pixels), the game-playing agent takes artificial intelligence a step nearer the goal of systems capable of learning a diversity of challenging tasks from scratch. The theory of reinforcement learning provides a normative account1, deeply rooted in psychological2 and neuroscientific3 perspectives on animal behaviour, of how agents may optimize their control of an environment. To use reinforcement learning successfully in situations approaching real-world complexity, however, agents are confronted with a difficult task: they must derive efficient representations of the environment from high-dimensional sensory inputs, and use these to generalize past experience to new situations. Remarkably, humans and other animals seem to solve this problem through a harmonious combination of reinforcement learning and hierarchical sensory processing systems4,5, the former evidenced by a wealth of neural data revealing notable parallels between the phasic signals emitted by dopaminergic neurons and temporal difference reinforcement learning algorithms3. While reinforcement learning agents have achieved some successes in a variety of domains6,7,8, their applicability has previously been limited to domains in which useful features can be handcrafted, or to domains with fully observed, low-dimensional state spaces. Here we use recent advances in training deep neural networks9,10,11 to develop a novel artificial agent, termed a deep Q-network, that can learn successful policies directly from high-dimensional sensory inputs using end-to-end reinforcement learning. We tested this agent on the challenging domain of classic Atari 2600 games12. We demonstrate that the deep Q-network agent, receiving only the pixels and the game score as inputs, was able to surpass the performance of all previous algorithms and achieve a level comparable to that of a professional human games tester across a set of 49 games, using the same algorithm, network architecture and hyperparameters. This work bridges the divide between high-dimensional sensory inputs and actions, resulting in the first artificial agent that is capable of learning to excel at a diverse array of challenging tasks.},
+  isbn = {1476-4687},
+  keywords = {Computer science}
+}
+
 @article{moghaddam2024cooperative,
   title = {Cooperative Adaptive Cruise Control System for Electric Vehicles through a Predictive Deep Reinforcement Learning Approach},
   author = {Moghaddam, Iman Tahbaz-zadeh and Ayati, Moosa and Taghavipour, Amir},
@@ -1169,6 +1406,17 @@
   pages = {1751--1773},
   publisher = {SAGE Publications Sage UK: London, England},
   file = {C:\Users\uif72473\Zotero\storage\IBCTNGRT\Moghaddam et al. - 2024 - Cooperative adaptive cruise control system for electric vehicles through a predictive deep reinforce.pdf}
+}
+
+@article{moody1989fast,
+  title = {Fast Learning in Networks of Locally-Tuned Processing Units},
+  author = {Moody, John and Darken, Christian J},
+  year = 1989,
+  journal = {Neural computation},
+  volume = {1},
+  number = {2},
+  pages = {281--294},
+  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info \dots}
 }
 
 @article{naish2007generalized,
@@ -1397,12 +1645,32 @@
   keywords = {C4.5,CART,Decision tree,Gain Ratio,Gini Index,Information Gain,Length,Minimum Description,Oblivious Decision Trees,Pruning}
 }
 
+@article{rudin2019stop,
+  title = {Stop Explaining Black Box Machine Learning Models for High Stakes Decisions and Use Interpretable Models Instead},
+  author = {Rudin, Cynthia},
+  year = 2019,
+  journal = {Nature machine intelligence},
+  volume = {1},
+  number = {5},
+  pages = {206--215},
+  publisher = {Nature Publishing Group UK London}
+}
+
 @inproceedings{ruiz2015general,
   title = {A General Algorithm for Exploration with Gaussian Processes in Complex, Unknown Environments},
   booktitle = {2015 {{IEEE}} International Conference on Robotics and Automation ({{ICRA}})},
   author = {Ruiz, Alberto Viseras and Olariu, Calin},
   year = 2015,
   pages = {3388--3393},
+  publisher = {IEEE}
+}
+
+@inproceedings{saffari2009line,
+  title = {On-Line Random Forests},
+  booktitle = {2009 Ieee 12th International Conference on Computer Vision Workshops, Iccv Workshops},
+  author = {Saffari, Amir and Leistner, Christian and Santner, Jakob and Godec, Martin and Bischof, Horst},
+  year = 2009,
+  pages = {1393--1400},
   publisher = {IEEE}
 }
 
@@ -1439,6 +1707,26 @@
   langid = {english},
   keywords = {effective distance,human safety,road bumps,speed limit,vehicle system dynamics,vehicle technology},
   file = {C:\Users\uif72473\Zotero\storage\ANLDFE55\Salau et al. - 2004 - Vehicle speed control using road bumps.pdf}
+}
+
+@article{sarker2021deep,
+  title = {Deep Learning: A Comprehensive Overview on Techniques, Taxonomy, Applications and Research Directions},
+  author = {Sarker, Iqbal H},
+  year = 2021,
+  journal = {SN computer science},
+  volume = {2},
+  number = {6},
+  pages = {1--20},
+  publisher = {Springer}
+}
+
+@article{schaul2015prioritized,
+  title = {Prioritized Experience Replay},
+  author = {Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+  year = 2015,
+  journal = {arXiv preprint arXiv:1511.05952},
+  eprint = {1511.05952},
+  archiveprefix = {arXiv}
 }
 
 @inproceedings{schulman2015trust,
@@ -1486,6 +1774,27 @@
   publisher = {World Scientific}
 }
 
+@article{seel2023variance,
+  title = {Variance-Based Exploration for Learning Model Predictive Control},
+  author = {Seel, Katrine and Bemporad, Alberto and Gros, S{\'e}bastien and Gravdahl, Jan Tommy},
+  year = 2023,
+  journal = {IEEE Access},
+  volume = {11},
+  pages = {60724--60736},
+  publisher = {IEEE}
+}
+
+@article{shalev2025online,
+  title = {Online Learning and Online Convex Optimization},
+  author = {{Shalev-Shwartz}, Shai},
+  year = 2025,
+  journal = {Foundations and Trends\textregistered{} in Machine Learning},
+  volume = {4},
+  number = {2},
+  pages = {107--194},
+  publisher = {Emerald Publishing Limited Boston---Delft}
+}
+
 @article{SHAMSHIRBAND20132105,
   title = {An Appraisal and Design of a Multi-Agent System Based Cooperative Wireless Intrusion Detection Computational Intelligence Technique},
   author = {Shamshirband, Shahaboddin and Anuar, Nor Badrul and Kiah, Miss Laiha Mat and Patel, Ahmed},
@@ -1516,6 +1825,17 @@
   langid = {english},
   keywords = {automotive control,hybrid systems,minimum principle,Optimal control,periodic control},
   file = {C:\Users\uif72473\Zotero\storage\SDK9J3VV\Shen et al. - 2018 - Fuel-Optimal Periodic Control of Passenger Cars in.pdf}
+}
+
+@article{smale2006online,
+  title = {Online Learning Algorithms},
+  author = {Smale, Steve and Yao, Yuan},
+  year = 2006,
+  journal = {Foundations of computational mathematics},
+  volume = {6},
+  number = {2},
+  pages = {145--170},
+  publisher = {Springer}
 }
 
 @article{snelson2005sparse,
@@ -1563,6 +1883,34 @@
   number = {4},
   pages = {637--672},
   publisher = {Springer}
+}
+
+@article{stone1977consistent,
+  title = {Consistent Nonparametric Regression},
+  author = {Stone, Charles J},
+  year = 1977,
+  journal = {The annals of statistics},
+  pages = {595--620},
+  publisher = {JSTOR}
+}
+
+@article{strehl2007online,
+  title = {Online Linear Regression and Its Application to Model-Based Reinforcement Learning},
+  author = {Strehl, Alexander and Littman, Michael},
+  year = 2007,
+  journal = {Advances in Neural Information Processing Systems},
+  volume = {20}
+}
+
+@article{su2011using,
+  title = {Using Clustering to Improve the {{KNN-based}} Classifiers for Online Anomaly Network Traffic Identification},
+  author = {Su, Ming-Yang},
+  year = 2011,
+  journal = {Journal of Network and Computer Applications},
+  volume = {34},
+  number = {2},
+  pages = {722--730},
+  publisher = {Elsevier}
 }
 
 @article{sunDDPGBasedDecisionMakingStrategy2020,
@@ -1644,6 +1992,16 @@
   publisher = {APS}
 }
 
+@inproceedings{vijayakumar2000locally,
+  title = {Locally Weighted Projection Regression: {{An}} o (n) Algorithm for Incremental Real Time Learning in High Dimensional Space},
+  booktitle = {Proceedings of the Seventeenth International Conference on Machine Learning ({{ICML}} 2000)},
+  author = {Vijayakumar, Sethu and Schaal, Stefan},
+  year = 2000,
+  volume = {1},
+  pages = {288--293},
+  publisher = {Morgan Kaufmann Burlington, MA}
+}
+
 @article{vyas2021drivebfr,
   title = {{{DriveBFR}}: Driver Behavior and Fuel-Efficiency-Based Recommendation System},
   author = {Vyas, Jayant and Das, Debasis and Chaudhury, Santanu},
@@ -1654,6 +2012,27 @@
   pages = {1446--1455},
   publisher = {IEEE},
   file = {C:\Users\uif72473\Zotero\storage\49SFC6QK\Vyas et al. - 2021 - DriveBFR driver behavior and fuel-efficiency-based recommendation system.pdf}
+}
+
+@article{wang2023incorporating,
+  title = {Incorporating Neuro-Inspired Adaptability for Continual Learning in Artificial Intelligence},
+  author = {Wang, Liyuan and Zhang, Xingxing and Li, Qian and Zhang, Mingtian and Su, Hang and Zhu, Jun and Zhong, Yi},
+  year = 2023,
+  journal = {Nature Machine Intelligence},
+  volume = {5},
+  number = {12},
+  pages = {1356--1368},
+  publisher = {Nature Publishing Group UK London}
+}
+
+@article{weinberg2023enhat,
+  title = {{{EnHAT}}---{{Synergy}} of a Tree-Based {{Ensemble}} with {{Hoeffding Adaptive Tree}} for Dynamic Data Streams Mining},
+  author = {Weinberg, Abraham Itzhak and Last, Mark},
+  year = 2023,
+  journal = {Information Fusion},
+  volume = {89},
+  pages = {397--404},
+  publisher = {Elsevier}
 }
 
 @book{weisbergAppliedLinearRegression2005,
@@ -1718,6 +2097,15 @@
   file = {C:\Users\uif72473\Zotero\storage\E6RJNSCM\Wu et al. - 2020 - Combined connected vehicles and variable speed lim.pdf}
 }
 
+@inproceedings{xie2011comparison,
+  title = {Comparison between Traditional Neural Networks and Radial Basis Function Networks},
+  booktitle = {2011 {{IEEE}} International Symposium on Industrial Electronics},
+  author = {Xie, Tiantian and Yu, Hao and Wilamowski, Bogdan},
+  year = 2011,
+  pages = {1194--1199},
+  publisher = {IEEE}
+}
+
 @article{xu2021overview,
   title = {An Overview of Eco-Driving Theory, Capability Evaluation, and Training Applications},
   author = {Xu, Nan and Li, Xiaohan and Liu, Qiao and Zhao, Di},
@@ -1758,6 +2146,30 @@
   publisher = {IEEE}
 }
 
+@article{yangSurveyLargeLanguage2023,
+  title = {A {{Survey}} of {{Large Language Models}} for {{Autonomous Driving}}},
+  author = {Yang, Zhenjie and Jia, Xiaosong and Li, Hongyang and Yan, Junchi},
+  year = 2023,
+  month = nov,
+  journal = {arXiv},
+  doi = {10.48550/arXiv.2311.01043},
+  abstract = {Autonomous driving technology, a catalyst for revolutionizing transportation and urban mobility, has the tend to transition from rule-based systems to data-driven strategies. Traditional module-based systems are constrained by cumulative errors among cascaded modules and inflexible pre-set rules. In contrast, end-to-end autonomous driving systems have the potential to avoid error accumulation due to their fully data-driven training process, although they often lack transparency due to their ``black box" nature, complicating the validation and traceability of decisions. Recently, large language models (LLMs) have demonstrated abilities including understanding context, logical reasoning, and generating answers. A natural thought is to utilize these abilities to empower autonomous driving. By combining LLM with foundation vision models, it could open the door to open-world understanding, reasoning, and few-shot learning, which current autonomous driving systems are lacking. In this paper, we systematically review a research line about \textbackslash textit\textbraceleft Large Language Models for Autonomous Driving (LLM4AD)\textbraceright. This study evaluates the current state of technological advancements, distinctly outlining the principal challenges and prospective directions for the field. For the convenience of researchers in academia and industry, we provide real-time updates on the latest advances in the field as well as relevant open-source resources via the designated link: this https URL.},
+  langid = {english},
+  keywords = {Artificial Intelligence (cs.AI)},
+  file = {C:\Users\uif72473\Zotero\storage\XDQH2UIG\Yang et al. - 2023 - A Survey of Large Language Models for Autonomous D.pdf}
+}
+
+@article{yu2002kernel,
+  title = {Kernel Nearest-Neighbor Algorithm},
+  author = {Yu, Kai and Ji, Liang and Zhang, Xuegong},
+  year = 2002,
+  journal = {Neural Processing Letters},
+  volume = {15},
+  number = {2},
+  pages = {147--156},
+  publisher = {Springer}
+}
+
 @article{yukselTwentyYearsMixture2012,
   title = {Twenty Years of Mixture of Experts},
   author = {Yuksel, Seniha Esen and Wilson, Joseph N. and Gader, Paul D.},
@@ -1777,6 +2189,17 @@
   journal = {arXiv preprint arXiv:2105.07351},
   eprint = {2105.07351},
   archiveprefix = {arXiv}
+}
+
+@article{zhang2010real,
+  title = {Real-Time Forecasting of Online Auctions via Functional k-Nearest Neighbors},
+  author = {Zhang, Shu and Jank, Wolfgang and Shmueli, Galit},
+  year = 2010,
+  journal = {International Journal of Forecasting},
+  volume = {26},
+  number = {4},
+  pages = {666--683},
+  publisher = {Elsevier}
 }
 
 @article{zhang2020testing,
@@ -1842,6 +2265,15 @@
   langid = {english},
   keywords = {Driving behavior,Driving simulator,Speed perception,Stimulation of subjectively equal speed (SSES),Tunnel mural decoration},
   file = {C:\Users\uif72473\Zotero\storage\SEVB63UE\Zhao et al. - 2022 - How does the mural decoration of the long tunnel s.pdf}
+}
+
+@misc{zheng2024lifelonglearninglargelanguage,
+  title = {Towards Lifelong Learning of Large Language Models: A Survey},
+  author = {Zheng, Junhao and Qiu, Shengjie and Shi, Chengming and Ma, Qianli},
+  year = 2024,
+  eprint = {2406.06391},
+  primaryclass = {cs.LG},
+  archiveprefix = {arXiv}
 }
 
 @article{zhuAccountingDynamicSpeed2014,
