Adding General Introduction and refactoring old Introduction into From Speed Recommendation to Adaptive Control

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -143,6 +143,16 @@
   institution = {American Transportation Research Institute}
 }
 
+@article{baratta2023human,
+  title = {Human Robot Collaboration in Industry 4.0: A Literature Review},
+  author = {Baratta, Alessio and Cimino, Antonio and Gnoni, Maria Grazia and Longo, Francesco},
+  year = 2023,
+  journal = {Procedia Computer Science},
+  volume = {217},
+  pages = {1887--1895},
+  publisher = {Elsevier}
+}
+
 @article{bauer2016understanding,
   title = {Understanding Probabilistic Sparse {{Gaussian}} Process Approximations},
   author = {Bauer, Matthias and {Van der Wilk}, Mark and Rasmussen, Carl Edward},
@@ -558,6 +568,19 @@
   file = {C:\Users\uif72473\Zotero\storage\PDMNWKS4\Du et al. - 2022 - Comfortable and energy-efficient speed control of .pdf}
 }
 
+@article{elvik2004speed,
+  title = {Speed and Road Accidents: An Evaluation of the {{Power Model}}},
+  author = {Elvik, Rune and Christensen, Peter and Amundsen, Astrid Helene},
+  year = 2004
+}
+
+@book{elvik2009power,
+  title = {The {{Power Model}} of the Relationship between Speed and Road Safety: Update and New Analyses},
+  author = {Elvik, Rune},
+  year = 2009,
+  number = {1034/2009}
+}
+
 @article{elvikSpeedRoadSafety2005,
   title = {Speed and {{Road Safety}}: {{Synthesis}} of {{Evidence}} from {{Evaluation Studies}}},
   author = {Elvik, Rune},
@@ -573,6 +596,36 @@
   abstract = {This paper presents a study evaluating the power model of the relationship between speed and road safety. The power model states that a given relative change in the mean speed of traffic is associa...},
   langid = {english},
   file = {C:\Users\uif72473\Zotero\storage\62YFNBUA\Elvik - 2005 - Speed and Road Safety Synthesis of Evidence from .pdf}
+}
+
+@techreport{etsc2017isa,
+  title = {Briefing: {{Intelligent Speed Assistance}} ({{ISA}})},
+  author = {{European Transport Safety Council}},
+  year = 2017,
+  address = {Brussels, Belgium},
+  institution = {ETSC}
+}
+
+@techreport{etsc2018isa,
+  title = {Briefing: {{Intelligent}} Speed Assistance ({{ISA}})},
+  author = {{European Transport Safety Council}},
+  year = 2018,
+  month = nov,
+  institution = {ETSC}
+}
+
+@misc{eu2019regulation,
+  title = {Regulation ({{EU}}) 2019/2144 of 27 {{November}} 2019 on Type-Approval Requirements for Motor Vehicles and Their Trailers},
+  author = {{European Parliament and Council}},
+  year = 2019,
+  howpublished = {Official Journal of the European Union, L 325}
+}
+
+@misc{eu2021delegated,
+  title = {Commission {{Delegated Regulation}} ({{EU}}) 2021/1958 of 23 {{June}} 2021 Supplementing {{Regulation}} ({{EU}}) 2019/2144 by Laying down Detailed Rules Concerning the Specific Test Procedures and Technical Requirements for {{Intelligent Speed Assistance}}},
+  author = {{European Commission}},
+  year = 2021,
+  howpublished = {Official Journal of the European Union, L 409/1}
 }
 
 @article{fourezEnsembleMultiAgentSystem2022,
@@ -879,6 +932,16 @@
   file = {C:\Users\uif72473\Zotero\storage\CCDXJ2JJ\Hüllermeier and Waegeman - 2021 - Aleatoric and epistemic uncertainty in machine lea.pdf}
 }
 
+@article{hussain2019relationship,
+  title = {The Relationship between Impact Speed and the Probability of Pedestrian Fatality during a Vehicle-Pedestrian Crash: {{A}} Systematic Review and Meta-Analysis},
+  author = {Hussain, Qinaat and Feng, Hanqin and Grzebieta, Raphael and Brijs, Tom and Olivier, Jake},
+  year = 2019,
+  journal = {Accident Analysis \& Prevention},
+  volume = {129},
+  pages = {241--249},
+  publisher = {Elsevier}
+}
+
 @article{jacobsen2024online,
   title = {Online Linear Regression in Dynamic Environments via Discounting},
   author = {Jacobsen, Andrew and Cutkosky, Ashok},
@@ -1117,6 +1180,17 @@
   year = 2014,
   journal = {Advances in neural information processing systems},
   volume = {27}
+}
+
+@article{lavasani2016market,
+  title = {Market Penetration Model for Autonomous Vehicles on the Basis of Earlier Technology Adoption Experience},
+  author = {Lavasani, Mohammad and Jin, Xia and Du, Yiman},
+  year = 2016,
+  journal = {Transportation Research Record},
+  volume = {2597},
+  number = {1},
+  pages = {67--74},
+  publisher = {SAGE Publications Sage CA: Los Angeles, CA}
 }
 
 @inproceedings{le2017gogp,
@@ -1825,6 +1899,15 @@
   langid = {english},
   keywords = {automotive control,hybrid systems,minimum principle,Optimal control,periodic control},
   file = {C:\Users\uif72473\Zotero\storage\SDK9J3VV\Shen et al. - 2018 - Fuel-Optimal Periodic Control of Passenger Cars in.pdf}
+}
+
+@inproceedings{siegel2003sense,
+  title = {The Sense-Think-Act Paradigm Revisited},
+  booktitle = {1st International Workshop on Robotic Sensing, 2003. {{ROSE}}'03.},
+  author = {Siegel, Mel},
+  year = 2003,
+  pages = {5--pp},
+  publisher = {IEEE}
 }
 
 @article{smale2006online,
